// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Padded should display children 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Padded>
    content
  </Padded>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": "content",
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="Padded"
      >
        content
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "content",
        "className": "Padded",
      },
      "ref": null,
      "rendered": Array [
        "content",
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "content",
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="Padded"
        >
          content
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "content",
          "className": "Padded",
        },
        "ref": null,
        "rendered": Array [
          "content",
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Padded should extend className 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Padded
    className="noPaddingBottom"
  >
    content
  </Padded>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": "content",
      "className": "noPaddingBottom",
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="Padded noPaddingBottom"
      >
        content
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "content",
        "className": "Padded noPaddingBottom",
      },
      "ref": null,
      "rendered": Array [
        "content",
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "content",
        "className": "noPaddingBottom",
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="Padded noPaddingBottom"
        >
          content
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "content",
          "className": "Padded noPaddingBottom",
        },
        "ref": null,
        "rendered": Array [
          "content",
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
